<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.studenthub.Menu"
    android:background="@android:color/white">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/dashboard"
            android:id="@+id/dashboardButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@color/ColorSec"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/scheduler"
            android:id="@+id/schedulerButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimaryTurq"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/countdown"
            android:id="@+id/countdownButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/ColorSec"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/to_do_list"
            android:id="@+id/todoButton"
            android:layout_weight="1"
            android:background="@color/colorPrimaryTurq"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/notes"
            android:id="@+id/notesButton"
            android:layout_weight="1"
            android:background="@color/ColorSec"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
